<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/im1"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_gravity="center|top"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="normal"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/im2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="35dp"
            android:src="@drawable/ic_launcher_foreground"/>
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/text_name"
            android:textColor="#050505"
            android:textSize="16sp"
            android:textStyle="bold|normal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="start|center"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/text_description"
            android:textAlignment="center"
            android:textColor="#737373"
            android:textSize="16sp"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_margin="16dp"
            android:background="@drawable/round"
            android:shadowColor="#000"
            android:text="@string/edit_profile"
            android:textColor="#4a86b9"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d4d4d4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/followers"
            android:textAllCaps="false"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/following"
            android:textAllCaps="false"/>

    </LinearLayout>
</LinearLayout>